--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "extends": "@devoxa"
   },
   "prettier": "@devoxa/prettier-config",
+  "dependencies": {
+    "node-fetch": "2.6.9"
+  },
   "devDependencies": {
     "@devoxa/eslint-config": "3.0.7",
     "@devoxa/prettier-config": "2.0.1",
     "@types/jest": "29.4.0",
     "@types/node": "18.11.18",
+    "@types/node-fetch": "2.6.2",
     "eslint": "8.33.0",
     "jest": "29.4.1",
     "prettier": "2.8.3",
