--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -33,6 +33,9 @@ jobs:
       - name: 'Run tests'
         run: yarn test --coverage
 
+      - name: 'Run integration tests'
+        run: yarn integration-test
+
       - name: 'Save test coverage'
         uses: codecov/codecov-action@v3
 
