--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "url": "https://github.com/devoxa/integresql-client"
   },
   "scripts": {
-    "test": "jest",
+    "test": "jest tests/",
+    "integration-test": "sh integration-test.sh",
     "format": "prettier --ignore-path='.gitignore' --list-different --write .",
     "format:check": "prettier --ignore-path='.gitignore' --check .",
     "lint": "eslint --ignore-path='.gitignore' '{src,tests}/**/*.ts'",
@@ -26,12 +27,14 @@
   "devDependencies": {
     "@devoxa/eslint-config": "3.0.7",
     "@devoxa/prettier-config": "2.0.1",
+    "@prisma/client": "4.9.0",
     "@types/jest": "29.4.0",
     "@types/node": "18.11.18",
     "@types/node-fetch": "2.6.2",
     "eslint": "8.33.0",
     "jest": "29.4.1",
     "prettier": "2.8.3",
+    "prisma": "4.9.0",
     "ts-jest": "29.0.5",
     "typescript": "4.9.5"
   },
