--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
   },
   "prettier": "@devoxa/prettier-config",
   "dependencies": {
-    "fast-glob": "3.3.2",
-    "node-fetch": "2.7.0"
+    "fast-glob": "3.3.2"
   },
   "devDependencies": {
     "@devoxa/eslint-config": "3.0.11",
@@ -31,8 +30,7 @@
     "@swc/core": "1.3.102",
     "@swc/jest": "0.2.29",
     "@types/jest": "29.5.11",
-    "@types/node": "18.19.4",
-    "@types/node-fetch": "2.6.10",
+    "@types/node": "20.10.6",
     "eslint": "8.56.0",
     "jest": "29.7.0",
     "prettier": "3.1.1",
@@ -43,6 +41,6 @@
     "access": "public"
   },
   "volta": {
-    "node": "18.19.0"
+    "node": "20.10.0"
   }
 }
